most of ui templates finished.